rhel: hugetlbfs group should be added as a system group.
Reported-by: Edgar Hoch <edgar.hoch@ims.uni-stuttgart.de>
Signed-off-by: Aaron Conole <aconole@redhat.com>
Signed-off-by: Ben Pfaff <blp@ovn.org>

--- a/rhel/openvswitch-fedora.spec.in
+++ b/rhel/openvswitch-fedora.spec.in
@@ -410,7 +410,7 @@ getent passwd openvswitch >/dev/null || \
     -c "Open vSwitch Daemons" openvswitch
 
 %if %{with dpdk}
-    getent group hugetlbfs >/dev/null || groupadd hugetlbfs
+    getent group hugetlbfs >/dev/null || groupadd -r hugetlbfs
     usermod -a -G hugetlbfs openvswitch
 %endif
 exit 0
