rhel: Rename the IPsec package as openvswitch-ipsec
Currently the split package for ipsec is named
openvswitch-openvswitch-ipsec, but it should be named openvswitch-ipsec.

This commit changes the spec file in order to have the IPsec package as
openvswitch-ipsec instead of openvswitch-openvswitch-ipsec.

CC: Qiuyu Xiao <qiuyu.xiao.qyx@gmail.com>
Fixes: bdddc715358e ("debian and rhel: Create IPsec package.")
Signed-off-by: Timothy Redaelli <tredaelli@redhat.com>
Signed-off-by: Ben Pfaff <blp@ovn.org>

--- a/rhel/openvswitch-fedora.spec.in
+++ b/rhel/openvswitch-fedora.spec.in
@@ -222,12 +222,12 @@ Requires: openvswitch openvswitch-ovn-common %{_py2}-openvswitch
 %description ovn-docker
 Docker network plugins for OVN.
 
-%package openvswitch-ipsec
+%package ipsec
 Summary: Open vSwitch IPsec tunneling support
 License: ASL 2.0
 Requires: openvswitch %{_py2}-openvswitch libreswan
 
-%description openvswitch-ipsec
+%description ipsec
 This package provides IPsec tunneling support for OVS tunnels.
 
 %prep
@@ -685,7 +685,7 @@ fi
 %{_mandir}/man8/ovn-controller-vtep.8*
 %{_unitdir}/ovn-controller-vtep.service
 
-%files openvswitch-ipsec
+%files ipsec
 %{_datadir}/openvswitch/scripts/ovs-monitor-ipsec
 %{_unitdir}/openvswitch-ipsec.service
 
