ovs-ofctl: Correct "out_group" field usage text in manpage.
Right now the man page of ovs-ofctl has "out_group=port". Correcting the
output to group instead of port.

Signed-off-by: Ashish Varma <ashishvarma.ovs@gmail.com>
Signed-off-by: Ben Pfaff <blp@ovn.org>

--- a/utilities/ovs-ofctl.8.in
+++ b/utilities/ovs-ofctl.8.in
@@ -1952,7 +1952,7 @@ If set, a matching flow must include an output action to \fIport\fR,
 which must be an OpenFlow port number or name (e.g. \fBlocal\fR).
 .
 .TP
-\fBout_group=\fIport\fR
+\fBout_group=\fIgroup\fR
 If set, a matching flow must include an \fBgroup\fR action naming
 \fIgroup\fR, which must be an OpenFlow group number.  This field
 is supported in Open vSwitch 2.5 and later and requires OpenFlow 1.1
