ovs-ctl: fallback to "uname -n" for fetching hostname
The command "hostname" is not available in OpenWrt by default.  Strace
result of hostname-3.13 on centos7 shows that bare "hostname" command
calls uname() to fetch node name.

Signed-off-by: Yousong Zhou <yszhou4tech@gmail.com>
Signed-off-by: Ben Pfaff <blp@ovn.org>

--- a/utilities/ovs-ctl.in
+++ b/utilities/ovs-ctl.in
@@ -38,9 +38,10 @@ insert_mod_if_required () {
 set_hostname () {
     # 'hostname -f' needs network connectivity to work.  So we should
     # call this only after ovs-vswitchd is running.
-    hn="$(hostname -f)"
-    if test X$FULL_HOSTNAME = Xno; then
-        hn="$(hostname)"
+    if test X$FULL_HOSTNAME = Xyes; then
+        hn="$(hostname -f)" || hn="$(uname -n)"
+    else
+        hn="$(uname -n)"
     fi
     ovs_vsctl set Open_vSwitch . external-ids:hostname="$hn"
 }
