tests: Remove redzone flag for FreeBSD 12+.
'redzone' not supported in new versions of jemalloc
(since jemalloc 5.0.0).

Signed-off-by: Ilya Maximets <i.maximets@samsung.com>
Signed-off-by: Ben Pfaff <blp@ovn.org>

--- a/atlocal.in
+++ b/atlocal.in
@@ -78,8 +78,11 @@ FreeBSD)
     [789].*)
         MALLOC_CONF=AJ
         ;;
-    *)
+    1[01].*)
         MALLOC_CONF=abort:true,junk:true,redzone:true
+        ;;
+    *)
+        MALLOC_CONF=abort:true,junk:true
         ;;
     esac
     export MALLOC_CONF
