--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,23 +8,23 @@ freebsd_build_task:
     memory: 8G
 
   env:
+    DEPENDENCIES: automake libtool gmake gcc wget
+                  python py27-six py27-sphinx
     matrix:
       COMPILER: gcc
       COMPILER: clang
 
   prepare_script:
-    - pkg install -y automake libtool gmake gcc wget
-                     python py27-six py27-sphinx
+    - pkg install -y ${DEPENDENCIES}
 
   configure_script:
     - ./boot.sh
-    - ./configure CC=$COMPILER MAKE=gmake OVS_CFLAGS='-Wall' --enable-Werror
+    - ./configure CC=${COMPILER} MAKE=gmake OVS_CFLAGS='-Wall' --enable-Werror
                   || { cat config.log; exit 1; }
 
   build_script:
     - gmake -j8
 
-#  TODO(i.maximets): Uncomment the test suite execution when it is fixed.
-#  check_script:
-#    - gmake -j8 check TESTSUITEFLAGS=-j8 RECHECK=yes
-#                || { cat ./tests/testsuite.log; exit 1; }
+  check_script:
+    - gmake -j8 check TESTSUITEFLAGS=-j8 RECHECK=yes
+                || { cat ./tests/testsuite.log; exit 1; }
