rhel: Add ovs-actions manpage to rhel and Fedora spec files
Fixes: be51cd417343 ("ovs-actions: New document describing OVS actions in detail.")
Signed-off-by: Timothy Redaelli <tredaelli@redhat.com>
Signed-off-by: Ben Pfaff <blp@ovn.org>

--- a/rhel/openvswitch-fedora.spec.in
+++ b/rhel/openvswitch-fedora.spec.in
@@ -613,6 +613,7 @@ fi
 %{_mandir}/man5/ovs-vswitchd.conf.db.5*
 %{_mandir}/man5/ovsdb.5*
 %{_mandir}/man5/vtep.5*
+%{_mandir}/man7/ovs-actions.7*
 %{_mandir}/man7/ovs-fields.7*
 %{_mandir}/man7/ovsdb.7*
 %{_mandir}/man7/ovsdb-server.7*
