--- a/rhel/openvswitch.spec.in
+++ b/rhel/openvswitch.spec.in
@@ -236,6 +236,7 @@ exit 0
 /usr/share/man/man5/ovs-vswitchd.conf.db.5.gz
 %{_mandir}/man5/ovsdb.5*
 /usr/share/man/man5/vtep.5.gz
+/usr/share/man/man7/ovs-actions.7.gz
 /usr/share/man/man7/ovs-fields.7.gz
 %{_mandir}/man7/ovsdb.7*
 %{_mandir}/man7/ovsdb-server.7*
