--- a/rhel/.gitignore
+++ b/rhel/.gitignore
@@ -4,4 +4,5 @@ kmod-openvswitch-rhel6.spec
 openvswitch-kmod-fedora.spec
 openvswitch.spec
 openvswitch-fedora.spec
+ovn-fedora.spec
 usr_lib_systemd_system_ovs-vswitchd.service
