travis: enable testsuite with dpdk
The testsuite flag isn't currently being passed for DPDK.  Let's pass it
and when a future DPDK supports running the check-dpdk suite, we can
turn that on then, too.

Signed-off-by: Aaron Conole <aconole@redhat.com>
Signed-off-by: Ben Pfaff <blp@ovn.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ env:
   - BUILD_ENV="-m32" OPTS="--disable-ssl"
   - KERNEL=3.16.54 DPDK=1
   - KERNEL=3.16.54 DPDK=1 OPTS="--enable-shared"
+  - KERNEL=3.16.54 TESTSUITE=1 DPDK=1
   - KERNEL=3.16.54 DPDK_SHARED=1
   - KERNEL=3.16.54 DPDK_SHARED=1 OPTS="--enable-shared"
   - KERNEL=4.17.14
