test/ovstest: fix shared library deps.
When using --enable-shared for configure, make fails with error
lib/.libs/libovn.so: undefined reference to `set_pidfile'
collect2: error: ld returned 1 exit status
Makefile:1616: recipe for target 'tests/ovstest' failed
make[1]: *** [tests/ovstest] Error 1
make[1]: Leaving directory '/ovn'
Makefile:1283: recipe for target 'all' failed
make: *** [all] Error 2

Because commit 94cb7648d8c32246ac0bed61484e2e27332ed68c started using
daemon.h for setting set_pidfile. Hence, need to link the same for ovstest to avoid failure.

It also fixes current CI failing on master for:
TESTSUITE=1 OPTS="--enable-shared"

Signed-off-by: Aliasgar Ginwala <aginwala@ebay.com>
Signed-off-by: Numan Siddique <numans@ovn.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,4 +44,4 @@ script: ./.travis/${TRAVIS_OS_NAME}-build.sh $OPTS
 notifications:
   email:
     recipients:
-      - ovs-build@openvswitch.org
+      - aginwala@asu.edu
